--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.parallel=true
 
 # Project properties
 group=eu.europa.ec.eudi
-version=0.1.1-SNAPSHOT
+version=0.1.1
 
 # Sonar
 systemProp.sonar.host.url=https://sonarcloud.io
