--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ kotlin.code.style=official
 
 # Gradle options
 org.gradle.parallel=true
+org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
 
 # Project properties
 group=eu.europa.ec.eudi
@@ -32,3 +33,13 @@ POM_ISSUE_SYSTEM=github
 POM_ISSUE_URL=https://github.com/eu-digital-identity-wallet/eudi-lib-jvm-rqes-csc-kt/issues
 
 POM_DEVELOPER_URL=https://github.com/eu-digital-identity-wallet
+
+# Indicates that the project uses AndroidX libraries.
+android.useAndroidX=true
+
+# Enables Jetifier to automatically migrate third-party libraries to AndroidX.
+# This is generally recommended when using AndroidX.
+android.enableJetifier=true
+
+# Other Gradle properties can be defined here, for example:
+# org.gradle.jvmargs=-Xmx2048m -Dkotlin.daemon.jvm.options="-Xmx2048m"
