Remove Logback dependency and disable Jetifier for Android compatibility

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,7 +39,7 @@ android.useAndroidX=true
 
 # Enables Jetifier to automatically migrate third-party libraries to AndroidX.
 # This is generally recommended when using AndroidX.
-android.enableJetifier=true
+android.enableJetifier=false
 
 # Other Gradle properties can be defined here, for example:
 # org.gradle.jvmargs=-Xmx2048m -Dkotlin.daemon.jvm.options="-Xmx2048m"
