Local hash calculation and signature embedding (R5) (#51)
* Add Android Support & Podofo Integration for R5 (#43)

* Add Android support with updated build configuration and manifest

* Support and integrate Podofo for document processing

- Introduced PodofoManager for handling document hashing and signing.
- Replaced GetSignedDocuments interface with CreateSignedDocuments.
- Updated dependencies and Gradle properties for Android.
- Removed obsolete classes related to document signing.

* Add CHANGELOG.md to document updates and improvements in R5

* Remove Logback dependency and disable Jetifier for Android compatibility

* fix tests

* Update minimum SDK version to 26 for Android compatibility

* Update minimum SDK version to 34 for Android compatibility

* chore: update minSdk to 26, Java target version, and replace toList() with stream collectors

* fix: correct expiration calculation to use milliseconds for CanExpire interface

* Update build script to rename the final artifact without the -fat suffix (#45)

* Ensure fatAAR task runs after assemble task (#46)

* Run fatAar before publishing snapshots (#47)

* Add PadEs-B-T support (#48)

* Implement TSA URL handling and timestamping in PodofoManager; add TimestampService for timestamp requests

* Replace bundled podofo-android.aar with maven dependency

* Formatting

---------

Co-authored-by: hectorgat <hgat@netcompany.com>

* Remove unused SCA Url (#49)

* Fix timestamp handling in createSignedDocuments to handle empty tsaUrl case (#50)

* Update README to clarify library's target platform and remove outdated notes (#52)

* Bump eudi-podofo version to 0.1.0

---------

Co-authored-by: hectorgat <hgat@netcompany.com>

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+agp = "8.2.0"
 kotlin = "2.0.21"
 coroutines = "1.9.0"
 dependency-check = "12.1.1"
@@ -10,11 +11,12 @@ java = "17"
 ktlint = "0.50.0"
 dokka = "1.9.20"
 maven-publish = "0.32.0"
-logback = "1.5.12"
 binary-compatibility-validator = "0.16.3"
 uri-kmp = "0.0.18"
 kover = "0.9.1"
-
+composeBom = "2024.06.00"
+composeCompiler = "1.5.13"
+eudi-podofo="0.1.0"
 
 [libraries]
 nimbus-oauth2-oidc-sdk = { module = "com.nimbusds:oauth2-oidc-sdk", version.ref = "nimbus-sdk" }
@@ -29,12 +31,16 @@ ktor-server-content-negotiation = { module = "io.ktor:ktor-server-content-negoti
 ktor-client-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
-logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 uri-kmp = { module = "com.eygraber:uri-kmp", version.ref = "uri-kmp" }
+compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
+compose-runtime = { group = "androidx.compose.runtime", name = "runtime" }
+eudi-podofo = { module = "eu.europa.ec.eudi:eudi-lib-android-podofo", version.ref = "eudi-podofo" }
 
 [plugins]
+android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 dependency-check = { id = "org.owasp.dependencycheck", version.ref = "dependency-check" }
-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
