--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ org.gradle.jvmargs=-Xmx4g -XX:MaxMetaspaceSize=1g -Dfile.encoding=UTF-8
 
 # Project properties
 group=eu.europa.ec.eudi
-version=0.5.0
+version=0.5.1-SNAPSHOT
 
 # Sonar
 systemProp.sonar.host.url=https://sonarcloud.io
