--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
 
 # Project properties
 group=eu.europa.ec.eudi
-version=0.6.2-SNAPSHOT
+version=0.6.2
 
 # Sonar
 systemProp.sonar.host.url=https://sonarcloud.io
